# libsrs

./: CMakeLists.txt  CONTRIBUTING.md  README.md  ThirdPartyNotices.txt
bench/: CMakeLists.txt  bench_axpy.cpp  bench_dot.cpp  bench_eigs.cpp  bench_mm_mul.cpp  bench_mv_mul.cpp  bench_transpose.cpp
include/srs/: array.h  band.h  datum.h  grid.h  math.h  packed.h  sparse.h  types.h  utils.h
include/srs/array_impl/: array0.h  array1.h  array2.h  array3.h  array4.h  array_io.h  array_opr.h  array_ref.h  array_ref1.h  array_ref2.h  array_ref3.h  array_ref_opr.h  functors.h  norm_type.h  slice_iter.h
include/srs/band_impl/: band_io.h  band_matrix.h  band_opr.h
include/srs/math_impl/: annealfunc.h  coolschedule.h  core.h  derivation.h  euler.h  geometry.h  integration.h  linalg.h  norm_type.h  quaternion.h  signal.h  simanneal.h  statistics.h
include/srs/packed_impl/: packed_io.h  packed_matrix.h  packed_opr.h
include/srs/sparse_impl/: sp_matrix.h  sp_vector.h  sparse_io.h  sparse_matrix.h  sparse_opr.h  sparse_vector.h
include/srs/utils_impl/: arma_io.h  format.h  input.h  stream.h  string.h
lib/: CMakeLists.txt  annealfunc.cpp  coolschedule.cpp  datum.cpp  euler.cpp  geometry.cpp  grid.cpp  input.cpp  integration.cpp  linalg.cpp  math.cpp  math_geometry.cpp  math_integration.cpp  math_linalg.cpp  math_statistics.cpp  quaternion.cpp  simanneal.cpp  statistics.cpp
tests/: CMakeLists.txt  test_array0.cpp  test_array1.cpp  test_array2.cpp  test_array3.cpp  test_array4.cpp  test_band.cpp  test_datum.cpp  test_find_section.inp  test_format.cpp  test_grid.cpp  test_input.cpp  test_math.cpp  test_packed.cpp  test_simanneal.cpp  test_simanneal.inp  test_sp_matrix.cpp  test_sp_vector.cpp  test_sparse_matrix.cpp  test_sparse_vector.cpp  test_stream.cpp  test_string.cpp
